--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "index.js"
   ],
   "scripts": {
-    "lint": "eslint es/**/*.js spec/**/*.spec.js",
+    "lint": "eslint es/**/*.js",
     "pretest": "npm run lint",
-    "test": "jasmine",
+    "test": "jest --forceExit",
+    "tdd": "jest --watch",
     "prebuild": "npm run test",
     "build": "rm -rf lib && babel es -d lib --source-maps",
     "prerelease": "npm run build",
@@ -26,15 +27,43 @@
     "postrelease": "npm run push && npm publish",
     "push": "git push origin master && git push origin --tags"
   },
+  "engines": {
+    "node": ">=8.9.0"
+  },
+  "peerDependencies": {
+    "hapi": "17.x.x"
+  },
   "devDependencies": {
-    "babel-cli": "^6.10.1",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-register": "^6.9.0",
-    "eslint": "^2.13.1",
-    "eslint-config-airbnb-base": "^3.0.1",
-    "eslint-plugin-import": "^1.9.2",
-    "eslint-plugin-jasmine": "^1.8.1",
-    "hapi": "^13.0.0",
-    "jasmine": "^2.4.1"
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-register": "^6.26.0",
+    "eslint": "^5.4.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jest": "^21.22.0",
+    "hapi": "^17.0.1",
+    "jest": "^23.5.0"
+  },
+  "babel": {
+    "presets": [
+      [
+        "env",
+        {
+          "targets": {
+            "node": "8.9.0"
+          }
+        }
+      ]
+    ]
+  },
+  "jest": {
+    "testPathIgnorePatterns": [
+      "<rootDir>/lib/",
+      "<rootDir>/node_modules/"
+    ],
+    "testRegex": "/__tests__/.*\\.spec\\.jsx?$"
+  },
+  "dependencies": {
+    "inert": "^5.1.0"
   }
 }
